# shitify

./: Cargo.toml  README.md  itsshitify,md
src/: main.rs
