# Cargo.toml
[package]
name = "spotifyisshit"
version = "0.1.0"
edition = "2021"

[dependencies]
tokio =  { version = "1.45.0", features = ["full"] }
reqwest = { version = "0.12.15", features = ["json", "stream", "gzip", "brotli"]}
rand = { version = "0.9.1", features = ["std"] }
bytes = "1.10.1"
http = "1.3.1"
futures-util = "0.3.31"
tokio-stream = "0.1.17"
